# CapLean

./: .gitignore  CapLean.lean  LICENSE  README.md  SCHEMA.md  capshim.py  demo_agent.py  lake-manifest.json  lakefile.toml  lean-toolchain  verify_trace.py
.github/workflows/: lean_action_ci.yml
CapLean/: AgentM.lean  AgentOp.lean  CapCore.lean  Capability.lean  Examples.lean  Monotonicity.lean  SafetySpine.lean  Sandbox.lean  SandboxExamples.lean  Trace.lean  TrustExamples.lean  TrustLattice.lean
Check/: Main.lean  TraceJSON.lean
caplean_mcp/: README.md  __init__.py  cursorrules.template.md  policy.py  pyproject.toml  server.py
